@@ -1,3 +1,7 @@
+Tue Sep 28 21:47:27 2004  Tim Janik  <timj@gtk.org>
+
+	* tests/latency/bselatencytest.cc: check pipe file type.
+
 Tue Sep 28 18:51:00 2004  Tim Janik  <timj@gtk.org>
 
 	* tests/latency/bselatencytest.cc: fixed up device handling, so the 
